unpackaged/main/default/objects/LyncUserLoginMaster__c/LyncUserLoginMaster__c.object-meta.xml
<CustomObject>
    <label>Lync User Login Info</label>
    <nameField>
        <label>LyncUserName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lync User Login Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>