unpackaged/main/default/objects/LyncUserLoginMaster__c/fields/LoggedInState__c.field-meta.xml
<CustomField>
    <fullName>LoggedInState__c</fullName>
    <label>LoggedInState</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SignedIn</fullName>
            </value>
            <value>
                <fullName>SignedOut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>