unpackaged/main/default/objects/LyncUserLoginMaster__c/fields/SFUserName__c.field-meta.xml
<CustomField>
    <fullName>SFUserName__c</fullName>
    <label>SFUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>