unpackaged/main/default/objects/LyncUserLoginMaster__c/fields/StateChangedAt__c.field-meta.xml
<CustomField>
    <fullName>StateChangedAt__c</fullName>
    <label>ChangedAt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>