unpackaged/main/default/objects/LyncUserLoginMaster__c/fields/StateChangedOn__c.field-meta.xml
<CustomField>
    <fullName>StateChangedOn__c</fullName>
    <label>StateChangedOn</label>
    <type>DateTime</type>
</CustomField>