unpackaged/main/default/objects/LyncUserLoginMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SFUserName__c</columns>
    <columns>NAME</columns>
    <columns>LoggedInState__c</columns>
    <columns>StateChangedOn__c</columns>
    <columns>StateChangedAt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>kesava</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>